parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> inicio
Rule 1     empty -> <empty>
Rule 2     inicio -> crear_var crear_funciones KW_INICIO funcion
Rule 3     crear_funciones -> funcion crear_funciones
Rule 4     crear_funciones -> empty
Rule 5     funcion -> KW_FUNCION tipo_funcion print_id OP_PARENTESIS_IZQ parametros OP_PARENTESIS_DER bloque_func
Rule 6     print_id -> ID
Rule 7     tipo_funcion -> tipo
Rule 8     tipo_funcion -> empty
Rule 9     tipo -> KW_ENTERO
Rule 10    tipo -> KW_FLOTANTE
Rule 11    tipo -> KW_STRING
Rule 12    parametros -> toma_parametro
Rule 13    parametros -> empty
Rule 14    toma_parametro -> tipo ID otro_parametro
Rule 15    otro_parametro -> print_coma toma_parametro
Rule 16    otro_parametro -> empty
Rule 17    print_coma -> OP_COMA
Rule 18    bloque_func -> OP_LLAVE_IZQ crear_var estatuto_rec OP_LLAVE_DER
Rule 19    crear_var -> tipo def_var otra_var OP_PUNTO_COMA crear_var
Rule 20    crear_var -> empty
Rule 21    def_var -> print_id arr_not arr_not
Rule 22    arr_not -> OP_CORCHETE_IZQ CTE_E OP_CORCHETE_DER
Rule 23    otra_var -> print_coma def_var otra_var
Rule 24    otra_var -> empty
Rule 25    estatuto -> asignacion
Rule 26    estatuto -> condicion
Rule 27    estatuto -> ciclo
Rule 28    estatuto -> ejec_funcion
Rule 29    estatuto -> funcion_predef
Rule 30    estatuto_rec -> estatuto estatuto_rec
Rule 31    estatuto_rec -> empty
Rule 32    asignacion -> ID arr_not arr_not OP_ASIGNACION expresion OP_PUNTO_COMA
Rule 33    ciclo -> KW_MIENTRAS OP_PARENTESIS_IZQ expresion OP_PARENTESIS_DER bloque_est
Rule 34    ejec_funcion -> ID OP_PARENTESIS_IZQ ejec_funcion_medio OP_PARENTESIS_DER OP_PUNTO_COMA
Rule 35    ejec_funcion_medio -> expresion ejec_funcion_cont
Rule 36    ejec_funcion_medio -> empty
Rule 37    ejec_funcion_cont -> OP_COMA expresion ejec_funcion_cont
Rule 38    ejec_funcion_cont -> empty
Rule 39    funcion_predef -> camina
Rule 40    funcion_predef -> gira
Rule 41    funcion_predef -> mira
Rule 42    funcion_predef -> a_string
Rule 43    funcion_predef -> a_entero
Rule 44    funcion_predef -> a_flotante
Rule 45    funcion_predef -> reiniciar
Rule 46    funcion_predef -> input
Rule 47    funcion_predef -> output
Rule 48    funcion_predef -> salta_a
Rule 49    expresion -> comp_or otra_expresion_or
Rule 50    otra_expresion_or -> OP_OR comp_or
Rule 51    otra_expresion_or -> empty
Rule 52    comp_or -> comp_and otra_expresion_and
Rule 53    otra_expresion_and -> OP_AND comp_and
Rule 54    otra_expresion_and -> empty
Rule 55    comp_and -> exp comp_and_end
Rule 56    comp_and_end -> op_comparador exp
Rule 57    comp_and_end -> empty
Rule 58    op_comparador -> OP_COMPARADOR
Rule 59    exp -> termino exp2
Rule 60    exp2 -> OP_TERMINO exp
Rule 61    exp2 -> empty
Rule 62    termino -> factor termino2
Rule 63    termino2 -> OP_FACTOR termino
Rule 64    termino2 -> empty
Rule 65    factor -> OP_PARENTESIS_IZQ expresion OP_PARENTESIS_DER
Rule 66    factor -> OP_TERMINO var_cte
Rule 67    factor -> var_cte
Rule 68    camina -> KW_CAMINA OP_PARENTESIS_IZQ expresion OP_PARENTESIS_DER OP_PUNTO_COMA
Rule 69    gira -> KW_GIRA OP_PARENTESIS_IZQ expresion OP_PARENTESIS_DER OP_PUNTO_COMA
Rule 70    mira -> KW_MIRA OP_PARENTESIS_IZQ expresion OP_PARENTESIS_DER OP_PUNTO_COMA
Rule 71    a_string -> KW_A_STRING OP_PARENTESIS_IZQ a_string2 OP_PARENTESIS_DER OP_PUNTO_COMA
Rule 72    a_string2 -> CTE_E
Rule 73    a_string2 -> CTE_F
Rule 74    a_string2 -> ID arr_not arr_not
Rule 75    a_entero -> KW_A_ENTERO OP_PARENTESIS_IZQ a_entero2 OP_PARENTESIS_DER OP_PUNTO_COMA
Rule 76    a_entero2 -> CTE_F
Rule 77    a_entero2 -> concat_string
Rule 78    condicion -> KW_SI OP_PARENTESIS_IZQ expresion OP_PARENTESIS_DER bloque_est si_no
Rule 79    si_no -> KW_SI_NO bloque_est
Rule 80    si_no -> empty
Rule 81    bloque_est -> OP_LLAVE_IZQ estatuto OP_LLAVE_DER
Rule 82    var_cte -> ID var_cte2
Rule 83    var_cte -> CTE_E
Rule 84    var_cte -> CTE_F
Rule 85    var_cte -> concat_string
Rule 86    var_cte -> KW_VERDADERO
Rule 87    var_cte -> KW_FALSO
Rule 88    var_cte -> KW_NORTE
Rule 89    var_cte -> KW_SUR
Rule 90    var_cte -> KW_ESTE
Rule 91    var_cte -> KW_OESTE
Rule 92    var_cte -> KW_ANCHO
Rule 93    var_cte -> KW_ALTO
Rule 94    var_cte2 -> arr_not arr_not
Rule 95    var_cte2 -> OP_PARENTESIS_IZQ var_cte3 OP_PARENTESIS_DER
Rule 96    var_cte3 -> expresion var_cte4
Rule 97    var_cte4 -> OP_COMA expresion var_cte4
Rule 98    var_cte4 -> empty
Rule 99    concat_string -> CTE_S concat_string2
Rule 100   concat_string2 -> OP_PUNTO CTE_S
Rule 101   concat_string2 -> empty
Rule 102   a_flotante -> KW_A_FLOTANTE OP_PARENTESIS_IZQ a_flotante2 OP_PARENTESIS_DER OP_PUNTO_COMA
Rule 103   a_flotante2 -> concat_string
Rule 104   a_flotante2 -> CTE_F
Rule 105   reiniciar -> KW_REINICIAR OP_PARENTESIS_IZQ OP_PARENTESIS_DER OP_PUNTO_COMA
Rule 106   input -> KW_INPUT OP_PARENTESIS_IZQ ID input2 OP_PARENTESIS_DER OP_PUNTO_COMA
Rule 107   input2 -> OP_COMA ID input2
Rule 108   input2 -> empty
Rule 109   output -> KW_OUTPUT OP_PARENTESIS_IZQ concat_string OP_PARENTESIS_DER OP_PUNTO_COMA
Rule 110   salta_a -> KW_SALTA_A OP_PARENTESIS_IZQ CTE_E OP_COMA CTE_E OP_PARENTESIS_DER OP_PUNTO_COMA

Terminals, with rules where they appear

CTE_E                : 22 72 83 110 110
CTE_F                : 73 76 84 104
CTE_S                : 99 100
ID                   : 6 14 32 34 74 82 106 107
KW_ALTO              : 93
KW_ANCHO             : 92
KW_A_ENTERO          : 75
KW_A_FLOTANTE        : 102
KW_A_STRING          : 71
KW_CAMINA            : 68
KW_ENTERO            : 9
KW_ESTE              : 90
KW_FALSO             : 87
KW_FLOTANTE          : 10
KW_FUNCION           : 5
KW_GIRA              : 69
KW_INICIO            : 2
KW_INPUT             : 106
KW_MIENTRAS          : 33
KW_MIRA              : 70
KW_NORTE             : 88
KW_OESTE             : 91
KW_OUTPUT            : 109
KW_REINICIAR         : 105
KW_SALTA_A           : 110
KW_SI                : 78
KW_SI_NO             : 79
KW_STRING            : 11
KW_SUR               : 89
KW_VERDADERO         : 86
OP_AND               : 53
OP_ASIGNACION        : 32
OP_COMA              : 17 37 97 107 110
OP_COMPARADOR        : 58
OP_CORCHETE_DER      : 22
OP_CORCHETE_IZQ      : 22
OP_FACTOR            : 63
OP_LLAVE_DER         : 18 81
OP_LLAVE_IZQ         : 18 81
OP_OR                : 50
OP_PARENTESIS_DER    : 5 33 34 65 68 69 70 71 75 78 95 102 105 106 109 110
OP_PARENTESIS_IZQ    : 5 33 34 65 68 69 70 71 75 78 95 102 105 106 109 110
OP_PUNTO             : 100
OP_PUNTO_COMA        : 19 32 34 68 69 70 71 75 102 105 106 109 110
OP_TERMINO           : 60 66
error                : 

Nonterminals, with rules where they appear

a_entero             : 43
a_entero2            : 75
a_flotante           : 44
a_flotante2          : 102
a_string             : 42
a_string2            : 71
arr_not              : 21 21 32 32 74 74 94 94
asignacion           : 25
bloque_est           : 33 78 79
bloque_func          : 5
camina               : 39
ciclo                : 27
comp_and             : 52 53
comp_and_end         : 55
comp_or              : 49 50
concat_string        : 77 85 103 109
concat_string2       : 99
condicion            : 26
crear_funciones      : 2 3
crear_var            : 2 18 19
def_var              : 19 23
ejec_funcion         : 28
ejec_funcion_cont    : 35 37
ejec_funcion_medio   : 34
empty                : 4 8 13 16 20 24 31 36 38 51 54 57 61 64 80 98 101 108
estatuto             : 30 81
estatuto_rec         : 18 30
exp                  : 55 56 60
exp2                 : 59
expresion            : 32 33 35 37 65 68 69 70 78 96 97
factor               : 62
funcion              : 2 3
funcion_predef       : 29
gira                 : 40
inicio               : 0
input                : 46
input2               : 106 107
mira                 : 41
op_comparador        : 56
otra_expresion_and   : 52
otra_expresion_or    : 49
otra_var             : 19 23
otro_parametro       : 14
output               : 47
parametros           : 5
print_coma           : 15 23
print_id             : 5 21
reiniciar            : 45
salta_a              : 48
si_no                : 78
termino              : 59 63
termino2             : 62
tipo                 : 7 14 19
tipo_funcion         : 5
toma_parametro       : 12 15
var_cte              : 66 67
var_cte2             : 82
var_cte3             : 95
var_cte4             : 96 97

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (2) inicio -> . crear_var crear_funciones KW_INICIO funcion
    (19) crear_var -> . tipo def_var otra_var OP_PUNTO_COMA crear_var
    (20) crear_var -> . empty
    (9) tipo -> . KW_ENTERO
    (10) tipo -> . KW_FLOTANTE
    (11) tipo -> . KW_STRING
    (1) empty -> .

    KW_ENTERO       shift and go to state 3
    KW_FLOTANTE     shift and go to state 1
    KW_STRING       shift and go to state 6
    KW_FUNCION      reduce using rule 1 (empty -> .)
    KW_INICIO       reduce using rule 1 (empty -> .)

    crear_var                      shift and go to state 2
    tipo                           shift and go to state 4
    inicio                         shift and go to state 5
    empty                          shift and go to state 7

state 1

    (10) tipo -> KW_FLOTANTE .

    ID              reduce using rule 10 (tipo -> KW_FLOTANTE .)


state 2

    (2) inicio -> crear_var . crear_funciones KW_INICIO funcion
    (3) crear_funciones -> . funcion crear_funciones
    (4) crear_funciones -> . empty
    (5) funcion -> . KW_FUNCION tipo_funcion print_id OP_PARENTESIS_IZQ parametros OP_PARENTESIS_DER bloque_func
    (1) empty -> .

    KW_FUNCION      shift and go to state 8
    KW_INICIO       reduce using rule 1 (empty -> .)

    crear_funciones                shift and go to state 9
    funcion                        shift and go to state 11
    empty                          shift and go to state 10

state 3

    (9) tipo -> KW_ENTERO .

    ID              reduce using rule 9 (tipo -> KW_ENTERO .)


state 4

    (19) crear_var -> tipo . def_var otra_var OP_PUNTO_COMA crear_var
    (21) def_var -> . print_id arr_not arr_not
    (6) print_id -> . ID

    ID              shift and go to state 13

    def_var                        shift and go to state 12
    print_id                       shift and go to state 14

state 5

    (0) S' -> inicio .



state 6

    (11) tipo -> KW_STRING .

    ID              reduce using rule 11 (tipo -> KW_STRING .)


state 7

    (20) crear_var -> empty .

    KW_FUNCION      reduce using rule 20 (crear_var -> empty .)
    KW_INICIO       reduce using rule 20 (crear_var -> empty .)
    ID              reduce using rule 20 (crear_var -> empty .)
    KW_SI           reduce using rule 20 (crear_var -> empty .)
    KW_MIENTRAS     reduce using rule 20 (crear_var -> empty .)
    KW_CAMINA       reduce using rule 20 (crear_var -> empty .)
    KW_GIRA         reduce using rule 20 (crear_var -> empty .)
    KW_MIRA         reduce using rule 20 (crear_var -> empty .)
    KW_A_STRING     reduce using rule 20 (crear_var -> empty .)
    KW_A_ENTERO     reduce using rule 20 (crear_var -> empty .)
    KW_A_FLOTANTE   reduce using rule 20 (crear_var -> empty .)
    KW_REINICIAR    reduce using rule 20 (crear_var -> empty .)
    KW_INPUT        reduce using rule 20 (crear_var -> empty .)
    KW_OUTPUT       reduce using rule 20 (crear_var -> empty .)
    KW_SALTA_A      reduce using rule 20 (crear_var -> empty .)
    OP_LLAVE_DER    reduce using rule 20 (crear_var -> empty .)


state 8

    (5) funcion -> KW_FUNCION . tipo_funcion print_id OP_PARENTESIS_IZQ parametros OP_PARENTESIS_DER bloque_func
    (7) tipo_funcion -> . tipo
    (8) tipo_funcion -> . empty
    (9) tipo -> . KW_ENTERO
    (10) tipo -> . KW_FLOTANTE
    (11) tipo -> . KW_STRING
    (1) empty -> .

    KW_ENTERO       shift and go to state 3
    KW_FLOTANTE     shift and go to state 1
    KW_STRING       shift and go to state 6
    ID              reduce using rule 1 (empty -> .)

    tipo                           shift and go to state 15
    tipo_funcion                   shift and go to state 16
    empty                          shift and go to state 17

state 9

    (2) inicio -> crear_var crear_funciones . KW_INICIO funcion

    KW_INICIO       shift and go to state 18


state 10

    (4) crear_funciones -> empty .

    KW_INICIO       reduce using rule 4 (crear_funciones -> empty .)


state 11

    (3) crear_funciones -> funcion . crear_funciones
    (3) crear_funciones -> . funcion crear_funciones
    (4) crear_funciones -> . empty
    (5) funcion -> . KW_FUNCION tipo_funcion print_id OP_PARENTESIS_IZQ parametros OP_PARENTESIS_DER bloque_func
    (1) empty -> .

    KW_FUNCION      shift and go to state 8
    KW_INICIO       reduce using rule 1 (empty -> .)

    crear_funciones                shift and go to state 19
    funcion                        shift and go to state 11
    empty                          shift and go to state 10

state 12

    (19) crear_var -> tipo def_var . otra_var OP_PUNTO_COMA crear_var
    (23) otra_var -> . print_coma def_var otra_var
    (24) otra_var -> . empty
    (17) print_coma -> . OP_COMA
    (1) empty -> .

    OP_COMA         shift and go to state 21
    OP_PUNTO_COMA   reduce using rule 1 (empty -> .)

    otra_var                       shift and go to state 20
    print_coma                     shift and go to state 22
    empty                          shift and go to state 23

state 13

    (6) print_id -> ID .

    OP_CORCHETE_IZQ reduce using rule 6 (print_id -> ID .)
    OP_PARENTESIS_IZQ reduce using rule 6 (print_id -> ID .)


state 14

    (21) def_var -> print_id . arr_not arr_not
    (22) arr_not -> . OP_CORCHETE_IZQ CTE_E OP_CORCHETE_DER

    OP_CORCHETE_IZQ shift and go to state 25

    arr_not                        shift and go to state 24

state 15

    (7) tipo_funcion -> tipo .

    ID              reduce using rule 7 (tipo_funcion -> tipo .)


state 16

    (5) funcion -> KW_FUNCION tipo_funcion . print_id OP_PARENTESIS_IZQ parametros OP_PARENTESIS_DER bloque_func
    (6) print_id -> . ID

    ID              shift and go to state 13

    print_id                       shift and go to state 26

state 17

    (8) tipo_funcion -> empty .

    ID              reduce using rule 8 (tipo_funcion -> empty .)


state 18

    (2) inicio -> crear_var crear_funciones KW_INICIO . funcion
    (5) funcion -> . KW_FUNCION tipo_funcion print_id OP_PARENTESIS_IZQ parametros OP_PARENTESIS_DER bloque_func

    KW_FUNCION      shift and go to state 8

    funcion                        shift and go to state 27

state 19

    (3) crear_funciones -> funcion crear_funciones .

    KW_INICIO       reduce using rule 3 (crear_funciones -> funcion crear_funciones .)


state 20

    (19) crear_var -> tipo def_var otra_var . OP_PUNTO_COMA crear_var

    OP_PUNTO_COMA   shift and go to state 28


state 21

    (17) print_coma -> OP_COMA .

    KW_ENTERO       reduce using rule 17 (print_coma -> OP_COMA .)
    KW_FLOTANTE     reduce using rule 17 (print_coma -> OP_COMA .)
    KW_STRING       reduce using rule 17 (print_coma -> OP_COMA .)
    ID              reduce using rule 17 (print_coma -> OP_COMA .)


state 22

    (23) otra_var -> print_coma . def_var otra_var
    (21) def_var -> . print_id arr_not arr_not
    (6) print_id -> . ID

    ID              shift and go to state 13

    def_var                        shift and go to state 29
    print_id                       shift and go to state 14

state 23

    (24) otra_var -> empty .

    OP_PUNTO_COMA   reduce using rule 24 (otra_var -> empty .)


state 24

    (21) def_var -> print_id arr_not . arr_not
    (22) arr_not -> . OP_CORCHETE_IZQ CTE_E OP_CORCHETE_DER

    OP_CORCHETE_IZQ shift and go to state 25

    arr_not                        shift and go to state 30

state 25

    (22) arr_not -> OP_CORCHETE_IZQ . CTE_E OP_CORCHETE_DER

    CTE_E           shift and go to state 31


state 26

    (5) funcion -> KW_FUNCION tipo_funcion print_id . OP_PARENTESIS_IZQ parametros OP_PARENTESIS_DER bloque_func

    OP_PARENTESIS_IZQ shift and go to state 32


state 27

    (2) inicio -> crear_var crear_funciones KW_INICIO funcion .

    $end            reduce using rule 2 (inicio -> crear_var crear_funciones KW_INICIO funcion .)


state 28

    (19) crear_var -> tipo def_var otra_var OP_PUNTO_COMA . crear_var
    (19) crear_var -> . tipo def_var otra_var OP_PUNTO_COMA crear_var
    (20) crear_var -> . empty
    (9) tipo -> . KW_ENTERO
    (10) tipo -> . KW_FLOTANTE
    (11) tipo -> . KW_STRING
    (1) empty -> .

    KW_ENTERO       shift and go to state 3
    KW_FLOTANTE     shift and go to state 1
    KW_STRING       shift and go to state 6
    KW_FUNCION      reduce using rule 1 (empty -> .)
    KW_INICIO       reduce using rule 1 (empty -> .)
    ID              reduce using rule 1 (empty -> .)
    KW_SI           reduce using rule 1 (empty -> .)
    KW_MIENTRAS     reduce using rule 1 (empty -> .)
    KW_CAMINA       reduce using rule 1 (empty -> .)
    KW_GIRA         reduce using rule 1 (empty -> .)
    KW_MIRA         reduce using rule 1 (empty -> .)
    KW_A_STRING     reduce using rule 1 (empty -> .)
    KW_A_ENTERO     reduce using rule 1 (empty -> .)
    KW_A_FLOTANTE   reduce using rule 1 (empty -> .)
    KW_REINICIAR    reduce using rule 1 (empty -> .)
    KW_INPUT        reduce using rule 1 (empty -> .)
    KW_OUTPUT       reduce using rule 1 (empty -> .)
    KW_SALTA_A      reduce using rule 1 (empty -> .)
    OP_LLAVE_DER    reduce using rule 1 (empty -> .)

    crear_var                      shift and go to state 33
    empty                          shift and go to state 7
    tipo                           shift and go to state 4

state 29

    (23) otra_var -> print_coma def_var . otra_var
    (23) otra_var -> . print_coma def_var otra_var
    (24) otra_var -> . empty
    (17) print_coma -> . OP_COMA
    (1) empty -> .

    OP_COMA         shift and go to state 21
    OP_PUNTO_COMA   reduce using rule 1 (empty -> .)

    otra_var                       shift and go to state 34
    empty                          shift and go to state 23
    print_coma                     shift and go to state 22

state 30

    (21) def_var -> print_id arr_not arr_not .

    OP_COMA         reduce using rule 21 (def_var -> print_id arr_not arr_not .)
    OP_PUNTO_COMA   reduce using rule 21 (def_var -> print_id arr_not arr_not .)


state 31

    (22) arr_not -> OP_CORCHETE_IZQ CTE_E . OP_CORCHETE_DER

    OP_CORCHETE_DER shift and go to state 35


state 32

    (5) funcion -> KW_FUNCION tipo_funcion print_id OP_PARENTESIS_IZQ . parametros OP_PARENTESIS_DER bloque_func
    (12) parametros -> . toma_parametro
    (13) parametros -> . empty
    (14) toma_parametro -> . tipo ID otro_parametro
    (1) empty -> .
    (9) tipo -> . KW_ENTERO
    (10) tipo -> . KW_FLOTANTE
    (11) tipo -> . KW_STRING

    OP_PARENTESIS_DER reduce using rule 1 (empty -> .)
    KW_ENTERO       shift and go to state 3
    KW_FLOTANTE     shift and go to state 1
    KW_STRING       shift and go to state 6

    tipo                           shift and go to state 36
    toma_parametro                 shift and go to state 37
    parametros                     shift and go to state 38
    empty                          shift and go to state 39

state 33

    (19) crear_var -> tipo def_var otra_var OP_PUNTO_COMA crear_var .

    KW_FUNCION      reduce using rule 19 (crear_var -> tipo def_var otra_var OP_PUNTO_COMA crear_var .)
    KW_INICIO       reduce using rule 19 (crear_var -> tipo def_var otra_var OP_PUNTO_COMA crear_var .)
    ID              reduce using rule 19 (crear_var -> tipo def_var otra_var OP_PUNTO_COMA crear_var .)
    KW_SI           reduce using rule 19 (crear_var -> tipo def_var otra_var OP_PUNTO_COMA crear_var .)
    KW_MIENTRAS     reduce using rule 19 (crear_var -> tipo def_var otra_var OP_PUNTO_COMA crear_var .)
    KW_CAMINA       reduce using rule 19 (crear_var -> tipo def_var otra_var OP_PUNTO_COMA crear_var .)
    KW_GIRA         reduce using rule 19 (crear_var -> tipo def_var otra_var OP_PUNTO_COMA crear_var .)
    KW_MIRA         reduce using rule 19 (crear_var -> tipo def_var otra_var OP_PUNTO_COMA crear_var .)
    KW_A_STRING     reduce using rule 19 (crear_var -> tipo def_var otra_var OP_PUNTO_COMA crear_var .)
    KW_A_ENTERO     reduce using rule 19 (crear_var -> tipo def_var otra_var OP_PUNTO_COMA crear_var .)
    KW_A_FLOTANTE   reduce using rule 19 (crear_var -> tipo def_var otra_var OP_PUNTO_COMA crear_var .)
    KW_REINICIAR    reduce using rule 19 (crear_var -> tipo def_var otra_var OP_PUNTO_COMA crear_var .)
    KW_INPUT        reduce using rule 19 (crear_var -> tipo def_var otra_var OP_PUNTO_COMA crear_var .)
    KW_OUTPUT       reduce using rule 19 (crear_var -> tipo def_var otra_var OP_PUNTO_COMA crear_var .)
    KW_SALTA_A      reduce using rule 19 (crear_var -> tipo def_var otra_var OP_PUNTO_COMA crear_var .)
    OP_LLAVE_DER    reduce using rule 19 (crear_var -> tipo def_var otra_var OP_PUNTO_COMA crear_var .)


state 34

    (23) otra_var -> print_coma def_var otra_var .

    OP_PUNTO_COMA   reduce using rule 23 (otra_var -> print_coma def_var otra_var .)


state 35

    (22) arr_not -> OP_CORCHETE_IZQ CTE_E OP_CORCHETE_DER .

    OP_CORCHETE_IZQ reduce using rule 22 (arr_not -> OP_CORCHETE_IZQ CTE_E OP_CORCHETE_DER .)
    OP_PARENTESIS_DER reduce using rule 22 (arr_not -> OP_CORCHETE_IZQ CTE_E OP_CORCHETE_DER .)
    OP_COMA         reduce using rule 22 (arr_not -> OP_CORCHETE_IZQ CTE_E OP_CORCHETE_DER .)
    OP_PUNTO_COMA   reduce using rule 22 (arr_not -> OP_CORCHETE_IZQ CTE_E OP_CORCHETE_DER .)
    OP_FACTOR       reduce using rule 22 (arr_not -> OP_CORCHETE_IZQ CTE_E OP_CORCHETE_DER .)
    OP_TERMINO      reduce using rule 22 (arr_not -> OP_CORCHETE_IZQ CTE_E OP_CORCHETE_DER .)
    OP_COMPARADOR   reduce using rule 22 (arr_not -> OP_CORCHETE_IZQ CTE_E OP_CORCHETE_DER .)
    OP_AND          reduce using rule 22 (arr_not -> OP_CORCHETE_IZQ CTE_E OP_CORCHETE_DER .)
    OP_OR           reduce using rule 22 (arr_not -> OP_CORCHETE_IZQ CTE_E OP_CORCHETE_DER .)
    OP_ASIGNACION   reduce using rule 22 (arr_not -> OP_CORCHETE_IZQ CTE_E OP_CORCHETE_DER .)


state 36

    (14) toma_parametro -> tipo . ID otro_parametro

    ID              shift and go to state 40


state 37

    (12) parametros -> toma_parametro .

    OP_PARENTESIS_DER reduce using rule 12 (parametros -> toma_parametro .)


state 38

    (5) funcion -> KW_FUNCION tipo_funcion print_id OP_PARENTESIS_IZQ parametros . OP_PARENTESIS_DER bloque_func

    OP_PARENTESIS_DER shift and go to state 41


state 39

    (13) parametros -> empty .

    OP_PARENTESIS_DER reduce using rule 13 (parametros -> empty .)


state 40

    (14) toma_parametro -> tipo ID . otro_parametro
    (15) otro_parametro -> . print_coma toma_parametro
    (16) otro_parametro -> . empty
    (17) print_coma -> . OP_COMA
    (1) empty -> .

    OP_COMA         shift and go to state 21
    OP_PARENTESIS_DER reduce using rule 1 (empty -> .)

    print_coma                     shift and go to state 42
    empty                          shift and go to state 44
    otro_parametro                 shift and go to state 43

state 41

    (5) funcion -> KW_FUNCION tipo_funcion print_id OP_PARENTESIS_IZQ parametros OP_PARENTESIS_DER . bloque_func
    (18) bloque_func -> . OP_LLAVE_IZQ crear_var estatuto_rec OP_LLAVE_DER

    OP_LLAVE_IZQ    shift and go to state 46

    bloque_func                    shift and go to state 45

state 42

    (15) otro_parametro -> print_coma . toma_parametro
    (14) toma_parametro -> . tipo ID otro_parametro
    (9) tipo -> . KW_ENTERO
    (10) tipo -> . KW_FLOTANTE
    (11) tipo -> . KW_STRING

    KW_ENTERO       shift and go to state 3
    KW_FLOTANTE     shift and go to state 1
    KW_STRING       shift and go to state 6

    tipo                           shift and go to state 36
    toma_parametro                 shift and go to state 47

state 43

    (14) toma_parametro -> tipo ID otro_parametro .

    OP_PARENTESIS_DER reduce using rule 14 (toma_parametro -> tipo ID otro_parametro .)


state 44

    (16) otro_parametro -> empty .

    OP_PARENTESIS_DER reduce using rule 16 (otro_parametro -> empty .)


state 45

    (5) funcion -> KW_FUNCION tipo_funcion print_id OP_PARENTESIS_IZQ parametros OP_PARENTESIS_DER bloque_func .

    KW_FUNCION      reduce using rule 5 (funcion -> KW_FUNCION tipo_funcion print_id OP_PARENTESIS_IZQ parametros OP_PARENTESIS_DER bloque_func .)
    KW_INICIO       reduce using rule 5 (funcion -> KW_FUNCION tipo_funcion print_id OP_PARENTESIS_IZQ parametros OP_PARENTESIS_DER bloque_func .)
    $end            reduce using rule 5 (funcion -> KW_FUNCION tipo_funcion print_id OP_PARENTESIS_IZQ parametros OP_PARENTESIS_DER bloque_func .)


state 46

    (18) bloque_func -> OP_LLAVE_IZQ . crear_var estatuto_rec OP_LLAVE_DER
    (19) crear_var -> . tipo def_var otra_var OP_PUNTO_COMA crear_var
    (20) crear_var -> . empty
    (9) tipo -> . KW_ENTERO
    (10) tipo -> . KW_FLOTANTE
    (11) tipo -> . KW_STRING
    (1) empty -> .

    KW_ENTERO       shift and go to state 3
    KW_FLOTANTE     shift and go to state 1
    KW_STRING       shift and go to state 6
    ID              reduce using rule 1 (empty -> .)
    KW_SI           reduce using rule 1 (empty -> .)
    KW_MIENTRAS     reduce using rule 1 (empty -> .)
    KW_CAMINA       reduce using rule 1 (empty -> .)
    KW_GIRA         reduce using rule 1 (empty -> .)
    KW_MIRA         reduce using rule 1 (empty -> .)
    KW_A_STRING     reduce using rule 1 (empty -> .)
    KW_A_ENTERO     reduce using rule 1 (empty -> .)
    KW_A_FLOTANTE   reduce using rule 1 (empty -> .)
    KW_REINICIAR    reduce using rule 1 (empty -> .)
    KW_INPUT        reduce using rule 1 (empty -> .)
    KW_OUTPUT       reduce using rule 1 (empty -> .)
    KW_SALTA_A      reduce using rule 1 (empty -> .)
    OP_LLAVE_DER    reduce using rule 1 (empty -> .)

    crear_var                      shift and go to state 48
    tipo                           shift and go to state 4
    empty                          shift and go to state 7

state 47

    (15) otro_parametro -> print_coma toma_parametro .

    OP_PARENTESIS_DER reduce using rule 15 (otro_parametro -> print_coma toma_parametro .)


state 48

    (18) bloque_func -> OP_LLAVE_IZQ crear_var . estatuto_rec OP_LLAVE_DER
    (30) estatuto_rec -> . estatuto estatuto_rec
    (31) estatuto_rec -> . empty
    (25) estatuto -> . asignacion
    (26) estatuto -> . condicion
    (27) estatuto -> . ciclo
    (28) estatuto -> . ejec_funcion
    (29) estatuto -> . funcion_predef
    (1) empty -> .
    (32) asignacion -> . ID arr_not arr_not OP_ASIGNACION expresion OP_PUNTO_COMA
    (78) condicion -> . KW_SI OP_PARENTESIS_IZQ expresion OP_PARENTESIS_DER bloque_est si_no
    (33) ciclo -> . KW_MIENTRAS OP_PARENTESIS_IZQ expresion OP_PARENTESIS_DER bloque_est
    (34) ejec_funcion -> . ID OP_PARENTESIS_IZQ ejec_funcion_medio OP_PARENTESIS_DER OP_PUNTO_COMA
    (39) funcion_predef -> . camina
    (40) funcion_predef -> . gira
    (41) funcion_predef -> . mira
    (42) funcion_predef -> . a_string
    (43) funcion_predef -> . a_entero
    (44) funcion_predef -> . a_flotante
    (45) funcion_predef -> . reiniciar
    (46) funcion_predef -> . input
    (47) funcion_predef -> . output
    (48) funcion_predef -> . salta_a
    (68) camina -> . KW_CAMINA OP_PARENTESIS_IZQ expresion OP_PARENTESIS_DER OP_PUNTO_COMA
    (69) gira -> . KW_GIRA OP_PARENTESIS_IZQ expresion OP_PARENTESIS_DER OP_PUNTO_COMA
    (70) mira -> . KW_MIRA OP_PARENTESIS_IZQ expresion OP_PARENTESIS_DER OP_PUNTO_COMA
    (71) a_string -> . KW_A_STRING OP_PARENTESIS_IZQ a_string2 OP_PARENTESIS_DER OP_PUNTO_COMA
    (75) a_entero -> . KW_A_ENTERO OP_PARENTESIS_IZQ a_entero2 OP_PARENTESIS_DER OP_PUNTO_COMA
    (102) a_flotante -> . KW_A_FLOTANTE OP_PARENTESIS_IZQ a_flotante2 OP_PARENTESIS_DER OP_PUNTO_COMA
    (105) reiniciar -> . KW_REINICIAR OP_PARENTESIS_IZQ OP_PARENTESIS_DER OP_PUNTO_COMA
    (106) input -> . KW_INPUT OP_PARENTESIS_IZQ ID input2 OP_PARENTESIS_DER OP_PUNTO_COMA
    (109) output -> . KW_OUTPUT OP_PARENTESIS_IZQ concat_string OP_PARENTESIS_DER OP_PUNTO_COMA
    (110) salta_a -> . KW_SALTA_A OP_PARENTESIS_IZQ CTE_E OP_COMA CTE_E OP_PARENTESIS_DER OP_PUNTO_COMA

    OP_LLAVE_DER    reduce using rule 1 (empty -> .)
    ID              shift and go to state 71
    KW_SI           shift and go to state 56
    KW_MIENTRAS     shift and go to state 58
    KW_CAMINA       shift and go to state 69
    KW_GIRA         shift and go to state 66
    KW_MIRA         shift and go to state 77
    KW_A_STRING     shift and go to state 63
    KW_A_ENTERO     shift and go to state 74
    KW_A_FLOTANTE   shift and go to state 76
    KW_REINICIAR    shift and go to state 55
    KW_INPUT        shift and go to state 70
    KW_OUTPUT       shift and go to state 79
    KW_SALTA_A      shift and go to state 49
